--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,9 @@ body header{
 a {
     text-decoration: none;
     color: black;
-    border-style: groove;
+    border-style: solid;
     padding: 4px;
-    background-color:rgb(180, 201, 211);
+    background-color:rgb(34, 211, 143);
 }
 nav{
     display: flex;
