--- a/css/styles.css
+++ b/css/styles.css
@@ -856,7 +856,6 @@ form {
     display: inline-block;
     justify-content: center;
     max-width: 1000px;
-
 }
 
 form div input {
@@ -940,6 +939,54 @@ form div input {
 .boton-login a{
     text-decoration: none;
 }
+
+/* Comienza el index de Generos */
+
+.main-genres{
+    height: 600px;
+}
+
+.genres-container{
+    display: flex;
+    flex-wrap: wrap;  
+}
+
+.genres-title{
+    color:white;
+    background-color: #080f28;
+    border-radius: 15px;
+    width: 100%;
+}
+
+.genres-peliculas{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+    background-color: #080f28;
+    border-radius: 15px;
+    width: 50%;
+    height: 500px;
+    margin: 0% 0% 0% 25%;
+}
+.genres-title h2{
+    font-size: 1.5em;
+    font-weight: 700;
+    margin-bottom: 1%;
+    padding: 10px 10px;
+    padding-left: 10px;
+    color:white;
+    font-weight: 700;
+    text-align: left;
+}
+
+.genres-peliculas a{
+    text-decoration: none;
+    color: white;
+}
+
+
 
 
 
