--- a/css/styles.css
+++ b/css/styles.css
@@ -986,6 +986,17 @@ form div input {
     color: white;
 }
 
+/* Aca comienza el detail-movies.html */
+
+/* .detail-movies-container{
+
+}
+ */
+.avengersfoto img{
+    width:400px;
+    height:460px;
+}
+
 
 
 
