--- a/css/styles.css
+++ b/css/styles.css
@@ -20,13 +20,13 @@ body header{
     background-color: #080f28;
     background-repeat: no-repeat;
     background-position: top;
-    /* background-size: 2000px 100px; */
     height: 125px;
 }
 
 .header-nav a{
     text-decoration: none;
     color: white;  
+    margin-top: 10px;
     padding: 10px 45px;
     background-color:#007aff;
     font-weight: bolder;
@@ -38,7 +38,7 @@ body header{
     align-items: center;
 }
 
-.header-registro input{
+.header-registro a input{
     border: white;
     border-width: 2px;
     border-style:solid;
@@ -58,7 +58,7 @@ body header{
 
 .lupa{
     color:#1888ffe1;
-    margin:0px 0px 40px 10px;
+    margin:0px 0px 36px 10px;
 }
 
 .header-busqueda input {
@@ -66,7 +66,7 @@ body header{
     background-color: #007aff;
     padding: 10px 10px;
     border-radius: 30px;
-    margin-bottom: 35px;
+    margin-bottom: 31px;
 }
 ::placeholder{
     color: white;
@@ -116,6 +116,10 @@ main{
     padding: 0%;
     border-radius: 20px;
 }
+.star-a{
+    color:#080f28;
+}
+
 /* SECCIÓN LO MÁS VISTO EN PELÍCULAS */
 .peliculas-populares{
     display: flex;
@@ -992,12 +996,73 @@ form div input {
 
 }
  */
-.avengersfoto img{
-    width:400px;
-    height:460px;
+
+ .detail-marvel-endgame{
+    margin: 5% 1%;
+    padding-bottom: 1%;
+    padding-top: 1%;
+    display: flex;
+    flex-wrap: wrap;
+    background-color:#007aff;
+     width: 220.38px;
+    height: 400.88;
+    /* width: 1200px;
+    height: 380px; */
+    padding-left: 1%;
+    padding-right: 1%;
+    flex-direction: row;
+    justify-content:center;
+    border-radius: 20px;
 }
 
+/* .detail-marvel-endgame img{
+    width:384px;
+    height: 473px;
+} */
 
 
+/* Aqui empieza resultados de busqueda */
+
+.main-container-result{
+    display: flex;
+    background-color:#080f28;
+    justify-content: space-around;
+    margin: 0%;
+    width: 1900px;
+    padding: 0%;
+    border-radius: 20px;
+}
+
+.resultados{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 100%;
+    height: 30%;
+    padding: 10px 10px;
+    color: white;
+}
+.resultados h2{
+    width: 100%;
+    display: inline-block;
+    background-color: #080f28;
+    margin-bottom: 1%;
+    padding: 10px 10px;
+    color:white;
+    font-weight: 700;
+    text-align: left;
+    border-radius: 15px;
+}
+
+.resultados h3 {
+    width: 100%;
+    background-color: #080f28;
+    margin-bottom: 1%;
+    padding-top: 20px;
+    padding-bottom: 50px;
+    padding-left: 5px;
+    text-align: left;
+    border-radius: 15px;
+}
 
 
