--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ body header{
     background-color: #007aff;
     padding: 10px 10px;
     border-radius: 30px;
-    margin-bottom: 31px;
+    margin-bottom: 33px;
 }
 ::placeholder{
     color: white;
@@ -1035,6 +1035,23 @@ form div input {
     margin-right: 3%;
     text-align: left;
 }
+
+.sinopsis-endgame div{
+    border-radius: 15px;
+    background-color: #007aff;
+    width: 25%;
+    text-align: center;
+}
+
+.sinopsis-endgame h2{
+    text-align: center;
+}
+
+.sinopsis-endgame h3 .mover{
+    display: flex;
+    justify-content: flex-start;
+}
+
 
 .endgamefavs{
     display: inline-block;
