--- a/css/styles.css
+++ b/css/styles.css
@@ -949,8 +949,34 @@ form div input {
 }
 
 /* Comienza el index de Generos */
+.maing-container{
+    color: white;
+}
 
-.main-genres{
+.maing-container h2{
+    background-color: #080f28;
+    border-radius: 15px;
+    padding: 10px;
+    font-weight: 700;
+}
+
+.genres-container{
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #080f28;
+    border-radius: 15px;
+}
+
+.moviesg-container{
+    width: 50%;
+    text-align: center;
+}
+
+.seriesg-container{
+    width: 50%;
+    text-align: center;
+}
+/* .main-genres{
     height: 600px;
 }
 
@@ -992,7 +1018,8 @@ form div input {
 .genres-peliculas a{
     text-decoration: none;
     color: white;
-}
+} */
+
 
 /* Aca comienza el detail-movies.html */
 
