--- a/css/styles.css
+++ b/css/styles.css
@@ -949,6 +949,7 @@ form div input {
 }
 
 /* Comienza el index de Generos */
+
 .maing-container{
     color: white;
 }
@@ -960,11 +961,17 @@ form div input {
     font-weight: 700;
 }
 
+.maing-container h3{
+    margin: 0px;
+}
+
 .genres-container{
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     background-color: #080f28;
     border-radius: 15px;
+    justify-content: center;
 }
 
 .moviesg-container{
@@ -972,53 +979,46 @@ form div input {
     text-align: center;
 }
 
+.moviesg-container a{
+    text-decoration: none;
+    color: white;
+}
+
+.moviesg-container div{
+    /* border-style: solid; */
+    border-color: #007aff;
+}
+
 .seriesg-container{
     width: 50%;
     text-align: center;
 }
-/* .main-genres{
-    height: 600px;
-}
 
-.genres-container{
-    display: flex;
-    flex-wrap: wrap;  
-}
-
-.genres-title{
-    color:white;
-    background-color: #080f28;
-    border-radius: 15px;
-    width: 100%;
-}
-
-.genres-peliculas{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    flex-direction: column;
-    color: white;
-    background-color: #080f28;
-    border-radius: 15px;
-    width: 50%;
-    height: 500px;
-    margin: 0% 0% 0% 25%;
-}
-.genres-title h2{
-    font-size: 1.5em;
-    font-weight: 700;
-    margin-bottom: 1%;
-    padding: 10px 10px;
-    padding-left: 10px;
-    color:white;
-    font-weight: 700;
-    text-align: left;
-}
-
-.genres-peliculas a{
+.seriesg-container a{
     text-decoration: none;
     color: white;
-} */
+}
+
+.seriesg-container div{
+    /* border-style: solid; */
+    border-color: #007aff;
+}
+
+.pelisflex{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 5%;
+}
+
+.pelisflex div{
+    width: 30%;
+    margin: 5px;
+    border-style: solid;
+    border-radius: 15px;
+    background-color: #007aff;
+}
 
 
 /* Aca comienza el detail-movies.html */
